--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -10,5 +10,10 @@
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="TextView" />
+
+ <VideoView 
+    android:layout_height="fill_parent"
+    android:layout_width="fill_parent" 
+    android:id="@+id/VideoView" />
  
 </LinearLayout>
